fix some spacing issues

--- a/css/downloads.css
+++ b/css/downloads.css
@@ -1,3 +1,7 @@
+#content h1 {
+  margin-bottom: 22px;
+}
+
 h3 {
   font-size: 24px;
   color: white;
